WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69522
Missing ifdef for some features in the V8 binding
https://bugs.webkit.org/show_bug.cgi?id=69522
Summary
Missing ifdef for some features in the V8 binding
Rémi Duraffort
Reported
2011-10-06 05:35:38 PDT
Some ifdef about VIDEO, JAVASCRIPT_DEBUGGER and XSLT are missing in the V8 binding files. These unprotected files can lead to build failures.
Attachments
Fix compilation
(3.69 KB, patch)
2011-10-06 05:42 PDT
,
Rémi Duraffort
no flags
Details
Formatted Diff
Diff
Fix compilation
(3.75 KB, patch)
2011-10-06 06:35 PDT
,
Rémi Duraffort
no flags
Details
Formatted Diff
Diff
Fix compilation
(2.40 KB, patch)
2011-10-06 06:59 PDT
,
Rémi Duraffort
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Rémi Duraffort
Comment 1
2011-10-06 05:42:04 PDT
Created
attachment 109950
[details]
Fix compilation Fix the compilation if VIDEO, XSLT or JAVASCRIPT_DEBUGGER are not defined.
Rémi Duraffort
Comment 2
2011-10-06 06:35:06 PDT
Created
attachment 109955
[details]
Fix compilation Missing url to bugzilla.
Nayan Kumar K
Comment 3
2011-10-06 06:37:57 PDT
Earlier I had submitted similar patch to resolve such compilation issue when some of the macro's are disabled -
https://bugs.webkit.org/show_bug.cgi?id=63920
. Based on the review comments, I seems like we need to generate these files all the time and have the macro embedded within the generated cpp|h files :(. While submitting the re-factored V8 porting patch, I will try to follow this approach mentioned by Alexey Proskuryakov in the in
bug #63920
. BTW, Aren't the changes in V8ScriptProfileNode[Custom].cpp files the part of
https://bugs.webkit.org/attachment.cgi?id=102530
?
Rémi Duraffort
Comment 4
2011-10-06 06:47:23 PDT
(In reply to
comment #3
)
> Based on the review comments, I seems like we need to generate these files all the time and have the macro embedded within the generated cpp|h files :(. While submitting the re-factored V8 porting patch, I will try to follow this approach mentioned by Alexey Proskuryakov in the in
bug #63920
.
These ifdefs does not comment out generated files but features that might no be enabled. The files are always present but not the features. I think that's meaning of the review in #63920: generate every files even if they are not used afterward and ifdef the features inside the files. That's what my page is doing IMHO.
> BTW, Aren't the changes in V8ScriptProfileNode[Custom].cpp files the part of
https://bugs.webkit.org/attachment.cgi?id=102530
?
Arg, yes they are already part of your initial patch (sorry I haven't checked these ones). They should be a separate patch for me as that's a generical bug (the feature should be ifdefed). I will recreate the patch without your part.
Rémi Duraffort
Comment 5
2011-10-06 06:59:26 PDT
Created
attachment 109959
[details]
Fix compilation Latest version: only fix the case of XSLT or VIDEO. (the last case belongs to another patch)
Nayan Kumar K
Comment 6
2011-10-06 07:30:54 PDT
> The files are always present but not the features. > I think that's meaning of the review in #63920: generate every files even if they are not used afterward and ifdef the features inside the files. That's what my page is doing IMHO.
Yes, you are right. Sorry for the noise.
Adam Barth
Comment 7
2011-10-06 07:37:47 PDT
Comment on
attachment 109959
[details]
Fix compilation View in context:
https://bugs.webkit.org/attachment.cgi?id=109959&action=review
> Source/WebCore/ChangeLog:6 > + Unreviewed build fix
I mean, it's being reviewed, so you can leave the "Reviewed by NOBODY (OOPS!) line and the tools will fill it in for you.
WebKit Review Bot
Comment 8
2011-10-06 09:36:41 PDT
Comment on
attachment 109959
[details]
Fix compilation Clearing flags on attachment: 109959 Committed
r96818
: <
http://trac.webkit.org/changeset/96818
>
WebKit Review Bot
Comment 9
2011-10-06 09:36:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug