Fix compilation by adding some missing ENABLE(VIDEO|XSLT) https://bugs.webkit.org/show_bug.cgi?id=69522

Unreviewed build fix

Patch by Rémi Duraffort <remi.duraffort@st.com> on 2011-10-06

* bindings/v8/custom/V8HTMLAudioElementConstructor.cpp:
* bindings/v8/custom/V8HTMLAudioElementConstructor.h:
* bindings/v8/custom/V8XSLTProcessorCustom.cpp:

Canonical link: https://commits.webkit.org/85576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96818 268f45cc-cd09-0410-ab3c-d52691b4dbfc