Source/WebCore/bindings/v8/custom/V8XSLTProcessorCustom.cpp
@@ -29,6 +29,9 @@
  */
 
 #include "config.h"
+
+#if ENABLE(XSLT)
+
 #include "V8XSLTProcessor.h"
 
 #include "Document.h"
@@ -145,3 +148,5 @@ v8::Handle<v8::Value> V8XSLTProcessor::removeParameterCallback(const v8::Argumen
 }
 
 } // namespace WebCore
+
+#endif // ENABLE(XSLT)
